@@ -3,11 +3,17 @@ googleVis 0.4.3 [2013-08-21]
 
 NEW FEATURES
 
-* gvisTable() gained new parameter formats, which allow users to specify the 
-  format of number displayed in a table. Thanks to Jacqueline Buros for 
-  providing ideas and code.
+* gvisTable() gained new parameter formats, which allow users to 
+  specify the format of number displayed in a table. 
+  Thanks to Jacqueline Buros for providing ideas and code.
+
+Changes
+
+* New examples for gvisBarChart, gvisColumnChart, gvisComboChart 
+  demonstarting how to change the width of bars
 
 * Extended FAQ section
+
 
 googleVis 0.4.3 [2013-05-25]
 ----------------------------
